# tt-emmerke-turnierbot

./: Dockerfile  ai.py  bot.py  compose.yaml  main.py  models.py  notify.py  parser.py  pyproject.toml  ttr_emoji.py
